--- a/src/Wodsoft.CommandLine/Wodsoft.CommandLine.csproj
+++ b/src/Wodsoft.CommandLine/Wodsoft.CommandLine.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.1</TargetFramework>
   </PropertyGroup>
+  <Import Project="../../common.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
